Hopefully fix the chat stretching thing

--- a/client/css/world.css
+++ b/client/css/world.css
@@ -103,6 +103,7 @@ body {
     flex-direction: column;
     background-color: #333;
     width: 60%;
+    max-width: 40vw;
 }
 
 #chat-container.pinned #chatArea {
